--- a/midterm_project/Base.lproj/LaunchScreen.storyboard
+++ b/midterm_project/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +17,26 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg3.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="A7C-C0-o38">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="606"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="Arsenal_football-club-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="yqF-1v-Xpe">
+                                <rect key="frame" x="240" y="85" width="120" height="90"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="90" id="Qbn-ju-TGz"/>
+                                    <constraint firstAttribute="width" constant="120" id="raS-wd-A3c"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="A7C-C0-o38" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="4RT-sT-AWD"/>
+                            <constraint firstAttribute="trailing" secondItem="A7C-C0-o38" secondAttribute="trailing" id="8vO-hT-GLI"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="A7C-C0-o38" secondAttribute="bottom" constant="-6" id="J0I-oi-ej1"/>
+                            <constraint firstItem="A7C-C0-o38" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="VRS-PI-fLj"/>
+                            <constraint firstItem="yqF-1v-Xpe" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="vyo-8L-XSX"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +44,8 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Arsenal_football-club-logo.png" width="323" height="380"/>
+        <image name="bg3.jpg" width="599" height="899"/>
+    </resources>
 </document>
